--- a/.github/workflows/Ubuntu.yml
+++ b/.github/workflows/Ubuntu.yml
@@ -12,8 +12,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Run
+ 
+      - name: Set up JDK 17 from AdoptOpenJDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+  
+      - name: Run bash shell
         run: |
           chmod +x start.sh
           sudo bash ./start.sh
