--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mine-server",
   "version": "1.0.0",
   "description": "A Minecraft local server with Cloudflared",
-  "main": "server.js",
+  "main": "static/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node static/server.js"
   },
   "repository": {
     "type": "git",
