--- a/mineflared.env
+++ b/mineflared.env
@@ -1,3 +1,3 @@
-DISCORD-BOT-TOKTEN="TEST"
-DISCORD-SERVER-ID="TEST"
-DISCORD-CHAT-ID="TEST"
+DISCORD-BOT-TOKTEN="TOKTEN"
+DISCORD-SERVER-ID="ID"
+DISCORD-CHAT-ID="ID"
