--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "static/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node static/server.js",
-    "bot": "node utils/bot.js"
+    "start": "node static/server.js"
   },
   "repository": {
     "type": "git",
