--- a/firewall/config/firewall.conf
+++ b/firewall/config/firewall.conf
@@ -1,5 +1,6 @@
 # Firewall Configuration
 
+# Cloudflared's port: 7844
 # Allow connections from port 7844 to ports 80 and 25565
 ALLOW_PORTS=7844:80,7844:25565,7844:25575
 
